# openrouter-class-key-provisioner

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  manage_keys.py  pyproject.toml
demo/: list_keys.py  main.py  make_key.py
tests/: test_database.py  test_pure_functions.py  test_roster_io.py
